--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+10
+version: 2.0.10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -72,6 +72,7 @@ dependencies:
   flutter_typeahead: ^3.2.1
   photo_view: ^0.13.0
   intl: ^0.17.0
+  change_app_package_name: ^1.0.0
 #  //newly added
   flutter_math_fork: any
   tuple: any
@@ -88,7 +89,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/app_logo.png"
+  image_path: "assets/e.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
